
name:                bench
version:             0.1.0.0
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable bench
    main-is:            Main.hs
    build-depends:      base   >= 4.6 && <4.7
                    ,   scotty >= 0.6.0
                    ,   aeson  >= 0.6.2.1
                    ,   text   >= 0.11.3.1
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -Wall -threaded -O2 -rtsopts

executable populate
    main-is:            Main.hs
    build-depends:      base                  >= 4.6     && <4.7
                    ,   persistent            >= 1.2.3.0
                    ,   persistent-template   >= 1.2.0.6
                    ,   persistent-postgresql >= 1.2.1
                    ,   transformers          >= 0.3.0.0
                    ,   random                >= 1.0.1.1
    hs-source-dirs:     pop
    default-language:   Haskell2010
    ghc-options:        -Wall -threaded -O2 -rtsopts
